--- a/Investigate_a_Dataset.ipynb
+++ b/Investigate_a_Dataset.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Tip**: Welcome to the Investigate a Dataset project! You will find tips in quoted sections like this to help organize your approach to your investigation. Once you complete this project, remove these **Tip** sections from your report before submission. First things first, you might want to double-click this Markdown cell and change the title so that it reflects your dataset and investigation.\n",
-    "\n",
+    "> **Tip**: ,
     "# Project: TMDb movie data\n",
     "\n",
     "## Table of Contents\n",
